# mu2e_pcie_utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  dkms.conf  post_install.sh  setup_dkms.sh
cfoInterfaceLib/: CFO.cpp  CFO.h  CFO_Compiler.cpp  CFO_Compiler.hh  CFO_Registers.cpp  CFO_Registers.h  CMakeLists.txt  Commands.txt  cfoRegDump.cc  mu2eCompiler.cc  util_main.cc
cfoInterfaceLib/python/: CMakeLists.txt  cfoInterfaceLib.i  test.py
cfoInterfaceLib/root/: CMakeLists.txt  classes.h  classes_def.xml
dtcInterfaceLib/: CFOandDTC_DMAs.cpp  CFOandDTC_DMAs.h  CFOandDTC_Register.def  CFOandDTC_Registers.cpp  CFOandDTC_Registers.h  CMakeLists.txt  DTC.cpp  DTC.h  DTCLibTest.cpp  DTCSoftwareCFO.cpp  DTCSoftwareCFO.h  DTC_Data_Verifier.h  DTC_Packets.cpp  DTC_Packets.h  DTC_Registers.cpp  DTC_Registers.h  DTC_Types.cpp  DTC_Types.h  DTC_binary_file_compare.cc  Mu2eUtil.cpp  Setup_DTC.sh  dcs_main.cc  dtcRegDump.cc  mu2edev.cpp  mu2edev.h  mu2esim.cpp  mu2esim.h  my_cntl.cc  otsStyleCoutMacros.cpp  otsStyleCoutMacros.h
dtcInterfaceLib/python/: CMakeLists.txt  dtcInterfaceLib.i  test.py
dtcInterfaceLib/root/: CMakeLists.txt  DTC_linkdef.h  classes.h  classes_def.xml
dtcInterfaceLib/test/: packetReader.cc  tester.cc
mcs/: CMakeLists.txt
mcs/basic_driver/: CMakeLists.txt
mu2e_driver/: CMakeLists.txt  mu2e_event.c  mu2e_main.c  mu2e_mem.c  mu2e_mmap_ioctl.h  mu2e_pci.c  xdma_hw.h
tools/: make_test_file.sh  read_dtc_temps.sh  read_node_temps.sh
ups/: product_deps
